dummy cng w/ results

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                 <button id="search" class="btn btn-default" type="button"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
               </span>
             </div><!-- /input-group -->
+            <table id='results' class="table-condensed"></table>
           </div>
           
 
