some low hanging fruit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Leg. Coordinating Commission GIS">
     <meta name="keywords" content="Election, Map, LCC, Minnesota">
 
-    <title>2016 MN Election Results</title>
+    <title>Metric visualizer</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -38,7 +38,7 @@
 
       <div class="container">
         <div id="navbar" class="navbar-center">
-            <h5><a href="#">Metric Geometry and Gerrymandering Gropu</a></h5>
+            <h5><a href="#">Metric Geometry and Gerrymandering Group</a></h5>
             <h5><image src="img/ballot-box4.png"/>Minnesota</h5>
         </div><!--/.nav-collapse -->
 
@@ -77,9 +77,9 @@
         <!-- <div class="col-sm-2"></div> -->
         <div class="col-sm-8 election-districts">
           <ul class="election-navigation">
-            <li><a class="election-navigation-a active" data-district="USPRS" data-geography="cty" data-name="COUNTYNAME">Presidential</a></li>
-            <li><a class="election-navigation-a" data-district="USSEN" data-geography="cty" data-name="COUNTYNAME">U.S. Senate</a></li>
-            <li><a class="election-navigation-a" data-district="USREP" data-geography="cng" data-name="CONGDIST">U.S. Congress</a></li>
+            <!-- <li><a class="election-navigation-a active" data-district="USPRS" data-geography="cty" data-name="COUNTYNAME">Presidential</a></li>
+            <li><a class="election-navigation-a" data-district="USSEN" data-geography="cty" data-name="COUNTYNAME">U.S. Senate</a></li> -->
+            <li><a class="election-navigation-a active" data-district="USREP" data-geography="cng" data-name="CONGDIST">U.S. Congress</a></li>
             <li><a class="election-navigation-a" data-district="MNSEN" data-geography="sen" data-name="MNSENDIST">MN Senate</a></li>
             <li><a class="election-navigation-a" data-district="MNLEG" data-geography="hse" data-name="MNLEGDIST">MN House</a></li>
           </ul>
@@ -105,13 +105,13 @@
           </div>
          
           <div class="sidebar-search">
-            <div class="input-group">
+            <!-- <div class="input-group">
               <label for="address">Find your precinct</label>
               <input type="text" id="address" class="form-control" placeholder="Enter address">
               <span class="input-group-btn">
                 <button id="search" class="btn btn-default" type="button"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
               </span>
-            </div><!-- /input-group -->
+            </div> --><!-- /input-group -->
             <table id='results' class="table-condensed"></table>
           </div>
           
