--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
       <div class="container-fluid">
       <div class="row">
       <!-- <div class="col-sm-1"></div> -->
-      <div class="prefix">
-      <div class="affix-container"> <!--data-spy="affix" data-offset-top="150"-->
+<!--       <div class="prefix">
+ -->      <div class="affix-container"> <!--data-spy="affix" data-offset-top="150"-->
 
         <div class="col-sm-3 sidebar">
           <div class="sidebar-results">
@@ -122,9 +122,15 @@
         </div>
         </div>
         
+		  <select id="dropyear">
+			  <option value="2012">2012</option>
+			  <option value="2002">2002</option>
+			  <option value="1994">1994</option>
+			</select>
         <div id="map" class="col-sm-9 map-container"></div>
-      </div>
-      <!-- <div class="col-sm-1"></div> -->
+
+<!--       </div>
+ -->      <!-- <div class="col-sm-1"></div> -->
       </div>
   
     <footer>
