fixed map click year

--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
 			  <option value="2002">2002</option>
 			  <option value="1994">1994</option>
 			</select>
+		<select id="dropcompactness">
+		  <option value="pp">Polsby-Popper</option>
+		  <option value="ch">Convex Hull</option>
+		  <option value="1994">1994</option>
+		</select>
+
+
         <div id="map" class="col-sm-9 map-container"></div>
 
 <!--       </div>
