all metrics toggle-able

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 			  <option value="1994">1994</option>
 			</select>
 		<select id="dropcompactness">
-		  <option value="pp">Polsby-Popper</option>
-		  <option value="ch">Convex Hull</option>
+		  <option value="measure2">Polsby-Popper</option>
+		  <option value="measure1">Convex Hull</option>
 		  <option value="1994">1994</option>
 		</select>
 
