--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
               </span>
             </div> --><!-- /input-group -->
             <table id='results' class="table-condensed"></table>
+            <span id="clear" >Clear <i class="fa fa-times" aria-hidden="true"></i></span>
           </div>
           
 
