--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <li><a class="election-navigation-a" data-district="USSEN" data-geography="cty" data-name="COUNTYNAME">U.S. Senate</a></li> -->
             <li><a class="election-navigation-a active" data-district="USREP" data-geography="Con" data-name="CONGDIST">U.S. Congress</a></li>
             <li><a class="election-navigation-a" data-district="MNSEN" data-geography="Sen" data-name="MNSENDIST">MN Senate</a></li>
-            <li><a class="election-navigation-a" data-district="MNLEG" data-geography="Hse" data-name="MNLEGDIST">MN House</a></li>
+            <li><a class="election-navigation-a" data-district="MNLEG" data-geography="Hos" data-name="MNLEGDIST">MN House</a></li>
           </ul>
         </div>
         <!-- <div class="col-sm-2"></div> -->
@@ -89,7 +89,7 @@
       </div>
 
       <div class="headline">
-          <h1 class="headline-title">This is a great big title.</h1>
+          <h1 class="headline-title">Compactness Measures.</h1>
           <p class="lead">Use this document as a way to quickly start any new mapping project.<br> It provides this text, sidebar navigation, and a Mapbox GL map.</p>
       </div>
      
@@ -131,7 +131,6 @@
 		<select id="dropcompactness">
 		  <option value="Polsby-Pop">Polsby-Popper</option>
 		  <option value="ConvexHull">Convex Hull</option>
-		  <option value="1994">1994</option>
 		</select>
 
 
