--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, minimal-ui, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="description" content="Interactive mapping of the 2016 Minnesota election.">
-    <meta name="author" content="Leg. Coordinating Commission GIS">
-    <meta name="keywords" content="Election, Map, LCC, Minnesota">
+    <meta name="description" content="Measuring compactness scores from 2012 Minnesota redistricting.">
+    <meta name="author" content="Metric Geometry and Gerrymandering Group">
+    <meta name="keywords" content="gerrymandr, redistricting, LCC, Minnesota">
+
+    <!--Facebook Share customization open graph meta tags. https://developers.facebook.com/tools/debug/og/object/-->
+    <meta property="fb:app_id" content="1124840784290142" />
+    <meta property="og:url"                content="http://www.gis.leg.mn/iMaps/metricViz/" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="Minnesota redistricting compactness scores" />
+    <meta property="og:description"        content="Interactive district map measuring compactness scores from 2012 Minnesota redistricting. Built by the Metric Geometry and Gerrymandering Group." />
+    <meta property="og:image"              content="http://www.gis.leg.mn/iMaps/metricViz/img/display.jpg" />
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site:id" content="@gerrymandr">
+    <meta name="twitter:creator" content="@gerrymandr">
+    <meta name="twitter:title" content="Minnesota redistricting compactness scores">
+    <meta name="twitter:description" content="Interactive district map measuring compactness scores from 2012 Minnesota redistricting. Built by the Metric Geometry and Gerrymandering Group.">
+    <meta name="twitter:image" content="http://www.gis.leg.mn/iMaps/metricViz/img/display.jpg">
 
     <title>Metric visualizer</title>
 
@@ -56,7 +71,7 @@
           </li>
 
           <li id="twitter">
-              <a href="http://twitter.com/intent/tweet?url=http%3A%2F%2Fwww.gis.leg.mn%2FiMaps%2Fminimal-ui&text=A%20New%20York%20Times%20inspired%20minimal%20user%20interface&hashtags=electionmapping, mapbox" target="_blank">
+              <a href="http://twitter.com/intent/tweet?url=http%3A%2F%2Fwww.gis.leg.mn%2FiMaps%2FmetricViz&text=Measuring%20compactness%20scores%20in%20Minnesota%20redistricting&hashtags=gerrymandr" target="_blank">
                   <i class="fa fa-twitter" aria-hidden="true"></i> Twitter
               </a>
           </li>
@@ -64,7 +79,7 @@
 
           <!-- https://www.linkedin.com/developer/apps/4241784/auth -->
           <li id="linkedin">
-              <a href="https://www.linkedin.com/shareArticle?mini=true&url=http://gis.leg.mn/iMaps/elections/2016/&title=A%20New%20York%20Times%20inspired%20minimal%20user%20interface&source=Minnesota Election Map" target="_blank">
+              <a href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A%2F%2Fwww.gis.leg.mn%2FiMaps%2FmetricViz&text=Measuring%20compactness%20scores%20in%20Minnesota%20redistricting&source=Metric Geometry and Redistricg Group: Minnesota Scores" target="_blank">
                 <i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn
               </a>
           </li>
@@ -157,6 +172,14 @@
 
     <script src="js/app.js"></script>
     <script src="js/helper.js"></script>
+     <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-7370043-3', 'auto');
+      ga('send', 'pageview');
+    </script>
 
   </body>
 </html>
